// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResponsiveWrapper /> should render correctly 1`] = `
.c0 {
  position: relative;
  width: 100%;
}

<div
  class="c0"
/>
`;

exports[`<ResponsiveWrapper overflowY /> should not apply overFlowY without an overflowYOffset or not responsive  1`] = `
.c0 {
  position: relative;
  width: 100%;
}

<div
  class="c0"
/>
`;

exports[`<ResponsiveWrapper responsive /> should render correctly  1`] = `
.c0 {
  position: relative;
  width: 100%;
  overflow-x: auto;
}

<div
  class="c0"
/>
`;

exports[`<ResponsiveWrapper responsive overflowY overflowYOffset="250px" /> should render correctly when overflowYOffset is provided  1`] = `
.c0 {
  position: relative;
  width: 100%;
  overflow-x: auto;
  padding-bottom: 250px;
  margin-bottom: -250px;
}

<div
  class="c0"
/>
`;
